--- a/src/app/allModules/registration/vendor-registration/vendor-registration.component.html
+++ b/src/app/allModules/registration/vendor-registration/vendor-registration.component.html
@@ -97,7 +97,7 @@
                 <!-- <div class="hrl"></div> -->
               </div>
               <div fxFlex="20" fxLayoutAlign="end">
-                <button class="GSTNBtn mr-40" mat-stroked-button>
+                <button class="GSTNBtn mr-40" mat-stroked-button (click)="OpenSelectGstinDialog()">
                   Adopt from GSTN</button>
               </div>
             </div>
