--- a/src/app/allModules/authentication/login/login.component.html
+++ b/src/app/allModules/authentication/login/login.component.html
@@ -1,7 +1,8 @@
 <div id="login" class="inner-scroll normal" fxLayout="row" fxLayoutAlign="start">
 
   <div id="login-intro" fxFlex fxHide fxShow.gt-xs>
-
+    <div class="welcometoTitle">Welcome to</div>
+    <div class="cloudSolutionPlatformTitle">Cloud Solution Platform</div>
   </div>
 
   <div id="login-form-wrapper" [style.background-color]="'white'" fusePerfectScrollbar
@@ -17,15 +18,15 @@
 
         <mat-form-field>
           <mat-label>User Name</mat-label>
-          <input matInput  formControlName="userName">
+          <input matInput formControlName="userName">
           <mat-error *ngIf="loginForm.get('userName').hasError('required')">
             User name is required
           </mat-error>
         </mat-form-field>
-        
+
         <mat-form-field>
           <mat-label>Password</mat-label>
-          <input matInput type="password"  formControlName="password">
+          <input matInput type="password" formControlName="password">
           <mat-error>
             Password is required
           </mat-error>
@@ -37,7 +38,7 @@
           </span>
         </div>
 
-        <button  mat-raised-button color="accent" class="submit-button" aria-label="LOGIN" (click)="LoginClicked()">
+        <button mat-raised-button color="accent" class="submit-button" aria-label="LOGIN" (click)="LoginClicked()">
           <span class="loginButton">LOG IN ></span>
         </button>
 
