--- a/src/app/allModules/pages/company-details/company-details.component.scss
+++ b/src/app/allModules/pages/company-details/company-details.component.scss
@@ -1,6 +1,6 @@
 @import "src/@fuse/scss/fuse";
 
-#companydetails {
+#chat {
   .progressBarPostion {
     position: absolute !important;
     bottom: 50%;
@@ -52,7 +52,6 @@
       //   }
     }
   }
-
   .borderRight1 {
     border-left: 1px solid black;
     border-radius: 1px;
@@ -298,11 +297,26 @@
   .mat-toolbar-multiple-rows {
     min-height: 58px !important;
   }
+  .addAttachmentClass {
+    color: #4784f7;
+    cursor: pointer !important;
+  }
   .addIcon {
     height: 20px;
     margin-top: 25px;
     padding-left: 4px;
     cursor: pointer !important;
+  }
+  .addBlueIcon {
+    @extend .addIcon;
+    margin-top: 0px;
+    height: 15px;
+  }
+  .attachClass {
+    // margin-top: 25px;
+    padding-left: 8px;
+    cursor: pointer !important;
+    color: #4784f7;
   }
   .removeIcon {
     height: 20px;
@@ -327,10 +341,6 @@
     border-radius: 2px;
     background-color: #f9d2a8;
   }
-  .addAttachmentClass {
-    color: #4784f7;
-    cursor: pointer !important;
-  }
   .sectionHeader {
     font-weight: bold;
     font-size: 18px;
@@ -339,7 +349,6 @@
     display: inline-block;
     position: relative;
   }
-
   .SectionTitle strong:after {
     content: "";
     height: 3px;
@@ -355,6 +364,12 @@
     height: $size;
     width: $size;
     line-height: $size;
+  }
+  .attachClass {
+    // margin-top: 25px;
+    padding-left: 8px;
+    cursor: pointer !important;
+    color: #4784f7;
   }
   .mat-icon {
     @include md-icon-size(12px);
@@ -374,5 +389,11 @@
     right: 0px;
     margin-bottom: 40px;
     z-index: 100;
+  }
+  .ValidityError {
+    color: #f44336;
+    font-size: 12px;
+    margin-top: -16px;
+    margin-left: 40px;
   }
 }
