--- a/src/app/allModules/registration/vendor-registration/vendor-registration.component.scss
+++ b/src/app/allModules/registration/vendor-registration/vendor-registration.component.scss
@@ -308,6 +308,8 @@
     height: 8px;
     margin-top: 5px;
     //border-radius: 4px;
+    margin-left: -1px;
+    margin-right: -1px;
   }
   .green-timeline {
     @extend .hor-timeline;
@@ -438,7 +440,7 @@
     margin-bottom: 0px;
     z-index: 100;
   }
-  .ValidityError{
+  .ValidityError {
     color: #f44336;
     font-size: 12px;
     margin-top: -16px;
