company,approval changes

--- a/src/app/allModules/approval/vendor-approval/vendor-approval.component.html
+++ b/src/app/allModules/approval/vendor-approval/vendor-approval.component.html
@@ -545,8 +545,7 @@
               </div>
             </div>
 
-            <!-- 
-            <div fxFlex fxLayout="column" *ngIf="ActivityLogsByVOB?.length">
+            <!-- <div fxFlex fxLayout="column" *ngIf="ActivityLogsByVOB?.length">
               <div style="margin-left: 7px">
                 <div class="SectionTitle">
                   <strong>Activity Table</strong>
