--- a/src/app/allModules/pages/company-details/company-details.component.html
+++ b/src/app/allModules/pages/company-details/company-details.component.html
@@ -1,6 +1,6 @@
 <div id="chat" class="page-layout carded fullwidth">
   <div class="center normal" style="margin-top: -27px !important;padding:32px 0px 1px !important;">
-    <div class="content-card1">
+    <div fxLayout class="content-card1">
       <div fxFlex class="side-bar">
         <div class="sidenav-content" fxFlex fxLayout="column">
           <mat-card style="margin-top: 5px;" fxFlex fxLayout="column">
@@ -267,12 +267,12 @@
                   </ng-container>
 
                   <ng-container matColumnDef="IDNumber">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 25%;"> IDNumber </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 25%;"> ID Number </th>
                     <td mat-cell *matCellDef="let element" style="width: 25%;"> {{element.IDNumber}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef="ValidUntil">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 25%;"> ValidUntil </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 25%;"> Valid Until </th>
                     <td mat-cell *matCellDef="let element" style="width: 25%;"> {{element.ValidUntil | date}} </td>
                   </ng-container>
 
@@ -310,9 +310,9 @@
               </div>
               <div class="mt-8">
                 <form autocomplete="off" fxLayout="column" name="form" novalidate [formGroup]="bankDetailsFormGroup">
-                  <div fxFlex fxLayout="row">
-                    <div fxFlex="10">
-                      <mat-form-field class="pl-20 pr-16" style="width: 100%;">
+                  <div fxFlex fxLayout="row" fxLayoutGap="8px">
+                    <div fxFlex="10" class="ml-8">
+                      <mat-form-field style="width: 100%;">
                         <input matInput placeholder="IFSC" formControlName="IFSC" #ifsc (blur)="GetBankByIFSC($event)"
                           (keyup.enter)="OnIFSCKeyEnter($event)">
                         <mat-error
@@ -322,7 +322,7 @@
                       </mat-form-field>
                     </div>
                     <div fxFlex="15">
-                      <mat-form-field class="pr-16" style="width: 100%;">
+                      <mat-form-field style="width: 100%;">
                         <input matInput placeholder="Acc No" formControlName="AccountNo" #accountNo
                           (keyup.enter)="keytab('accHolderName')">
                         <mat-error
@@ -332,7 +332,7 @@
                       </mat-form-field>
                     </div>
                     <div fxFlex="20">
-                      <mat-form-field class="pr-16" style="width: 100%;">
+                      <mat-form-field style="width: 100%;">
                         <input matInput placeholder="Acc Holders name" formControlName="Name" #accHolderName
                           (keyup.enter)="keytab('bankName')">
                         <mat-error
@@ -342,7 +342,7 @@
                       </mat-form-field>
                     </div>
                     <div fxFlex="15">
-                      <mat-form-field class="pr-16" style="width: 100%;">
+                      <mat-form-field style="width: 100%;">
                         <input matInput placeholder="Bank Name" formControlName="BankName" #bankName
                           (keyup.enter)="keytab('bankCity')">
                         <mat-error
@@ -352,7 +352,7 @@
                       </mat-form-field>
                     </div>
                     <div fxFlex="10">
-                      <mat-form-field class="pr-16" style="width: 100%;">
+                      <mat-form-field style="width: 100%;">
                         <input matInput placeholder="City" formControlName="City" #bankCity
                           (keyup.enter)="keytab('branch')">
                         <mat-error
@@ -361,8 +361,8 @@
                         </mat-error>
                       </mat-form-field>
                     </div>
-                    <div fxFlex="15">
-                      <mat-form-field class="pr-16" style="width: 100%;">
+                    <div fxFlex="14">
+                      <mat-form-field style="width: 100%;">
                         <input matInput placeholder="Branch" formControlName="Branch" #branch
                           (keydown.enter)="BankEnterKeyDown()">
                         <mat-error
@@ -371,7 +371,7 @@
                         </mat-error>
                       </mat-form-field>
                     </div>
-                    <div fxFlex="10" fxLayoutAlign="start center">
+                    <div fxFlex="11" fxLayoutAlign="start center">
                       <img class="addBlueIcon" src="assets/images/addBlue.png" (click)="fileInput2.click()">
                       <span class="attachClass" (click)="fileInput2.click()">
                         Add Attachment
@@ -682,8 +682,6 @@
       </div>
       <div fxLayout id="footerCard">
         <div fxLayout fxFlex class="my-8 px-24" fxLayoutAlign="end">
-          <!-- <button (click)="SaveClicked()" class="SaveAsDraftBtn mr-8" mat-stroked-button>
-            Save as Draft</button> -->
           <button (click)="SaveClicked()" *ngIf="SelectedBPVendorOnBoarding?.TransID" class="SaveBtn mr-40"
             mat-raised-button>
             Update</button>
