--- a/src/app/allModules/authentication/login/login.component.scss
+++ b/src/app/allModules/authentication/login/login.component.scss
@@ -4,7 +4,7 @@ login {
     #login {
         width: 100%;
         overflow: hidden;
-        background: url("/assets/images/backgrounds/Image_bp_cloud.png") no-repeat;
+        background: url("/assets/images/backgrounds/BPCloudBG.png") no-repeat;
         // background-size: cover;
         background-size: 72% 100%;
 
@@ -49,18 +49,18 @@ login {
         }
 
         #login-form-wrapper {
-            width: 400px;
-            min-width: 400px;
-            max-width: 400px;
+            width: 28%;
+            min-width: 28%;
+            max-width: 28%;
             overflow: auto;
             -webkit-overflow-scrolling: touch;
 
             @include mat-elevation(16);
 
             @include media-breakpoint("sm") {
-                width: 360px;
-                min-width: 360px;
-                max-width: 360px;
+                width: 28%;
+                min-width: 28%;
+                max-width: 28%;
             }
 
             @include media-breakpoint("xs") {
