--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -1,14 +1,14 @@
-
-
 <div class="navbar-top" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
     <div class="buttons">
 
         <button mat-icon-button class="toggle-sidebar-folded" (click)="toggleSidebarFolded()" fxHide.lt-lg>
-            <mat-icon style="height: 40px !important;width: 40px !important;" svgIcon="menuIcon" class="secondary-text"></mat-icon>
+            <mat-icon style="height: 50px !important;width: 50px !important;" svgIcon="menuFoldedIcon"
+                class="secondary-text"></mat-icon>
         </button>
 
         <button mat-icon-button class="toggle-sidebar-opened" (click)="toggleSidebarOpened()" fxHide.gt-md>
-            <mat-icon style="height: 40px !important;width: 40px !important;" svgIcon="menuIcon" class="secondary-text"></mat-icon>
+            <mat-icon style="height: 50px !important;width: 50px !important;" svgIcon="menuOpenedIcon"
+                class="secondary-text"></mat-icon>
         </button>
 
     </div>
