--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -1,14 +1,30 @@
 <div class="navbar-top" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
-    <div class="buttons">
+    <!-- <div class="buttons">
 
         <button mat-icon-button class="toggle-sidebar-folded" (click)="toggleSidebarFolded()" fxHide.lt-lg>
-            <mat-icon style="height: 50px !important;width: 50px !important;" svgIcon="menuFoldedIcon"
-                class="secondary-text"></mat-icon>
+            <mat-icon style="height: 50px !important;width: 50px !important;" svgIcon="menuIcon" class="secondary-text">
+            </mat-icon>
         </button>
 
         <button mat-icon-button class="toggle-sidebar-opened" (click)="toggleSidebarOpened()" fxHide.gt-md>
-            <mat-icon style="height: 50px !important;width: 50px !important;" svgIcon="menuOpenedIcon"
-                class="secondary-text"></mat-icon>
+            <mat-icon style="height: 50px !important;width: 50px !important;" svgIcon="menuIcon" class="secondary-text">
+            </mat-icon>
+        </button>
+
+    </div> -->
+
+    <div class="buttons">
+
+        <button mat-icon-button class="toggle-sidebar-folded" (click)="toggleSidebarOpened()">
+            <mat-icon style="height: 50px !important;width: 60px !important;" svgIcon="bpCollapsedMenuIcon"
+                class="secondary-text">
+            </mat-icon>
+        </button>
+
+        <button mat-icon-button class="toggle-sidebar-opened" (click)="toggleSidebarFolded()">
+            <mat-icon style="height: 50px !important;width: 100px !important;" svgIcon="bpOpenedMenuIcon"
+                class="secondary-text">
+            </mat-icon>
         </button>
 
     </div>
