--- a/src/app/allModules/pages/dashboard/dashboard.component.scss
+++ b/src/app/allModules/pages/dashboard/dashboard.component.scss
@@ -35,7 +35,7 @@
     vertical-align: middle;
   }
   .center {
-    padding: 5px !important;
+    // padding: 5px !important;
     background-color: white;
   }
   // .side-bar {
