--- a/src/app/allModules/pages/dashboard/dashboard.component.html
+++ b/src/app/allModules/pages/dashboard/dashboard.component.html
@@ -193,13 +193,23 @@
               style=" cursor: pointer;">
             </tr>
           </table>
-          <div flex *ngIf="!AllVendorOnBoardings?.length">
-            <mat-icon svgIcon="infoIcon" style="color: #1b56ca;margin-top: 10px;margin-left: 70px">
+          <!-- <table>
+            <tr *ngIf="!VendorOnBoardingsDataSource.data.length">
+              <td style="text-align: center;" [attr.colspan]="VendorOnBoardingsDisplayedColumns.length">
+                <mat-icon svgIcon="infoIcon" style="color: #1b56ca;margin-top: 10px;margin-left: 70px">
+                </mat-icon>
+                <span style="margin-left: 10px;"> No Records Found!</span>
+              </td>
+            </tr>
+          </table> -->
+          <div flex fxLayoutAlign="center center" style="margin-top: 20px;" *ngIf="!AllVendorOnBoardings?.length">
+            <mat-icon svgIcon="infoIcon" style="color: #1b56ca;">
             </mat-icon>
             <span style="margin-left: 10px;">The table does not contain any records</span>
           </div>
           <div flex>
-            <mat-paginator [pageSizeOptions]="[10, 20, 30, 50, 75, 100]" showFirstLastButtons>
+            <mat-paginator [hidden]="!AllVendorOnBoardings?.length" [pageSize]="5"
+              [pageSizeOptions]="[10, 20, 30, 50, 75, 100]" showFirstLastButtons>
             </mat-paginator>
           </div>
         </div>
