--- a/src/app/allModules/pages/company-details/company-details.component.html
+++ b/src/app/allModules/pages/company-details/company-details.component.html
@@ -210,7 +210,7 @@
             <div fxFlex fxLayout="column" class="mt-24">
               <div style="margin-left: 7px">
                 <div class="SectionTitle">
-                  <strong>Identification Table</strong>
+                  <strong>Identity Table</strong>
                 </div>
               </div>
               <div class="mt-8">
