--- a/src/app/allModules/approval/vendor-approval/vendor-approval.component.html
+++ b/src/app/allModules/approval/vendor-approval/vendor-approval.component.html
@@ -217,7 +217,7 @@
             <div fxFlex fxLayout="column" class="mt-24" *ngIf="IdentificationsByVOB?.length">
               <div style="margin-left: 7px">
                 <div class="SectionTitle">
-                  <strong>Identification Table</strong>
+                  <strong>Identity Table</strong>
                 </div>
               </div>
               <!-- <div class="mt-8">
