--- a/src/app/allModules/registration/vendor-registration/vendor-registration.component.html
+++ b/src/app/allModules/registration/vendor-registration/vendor-registration.component.html
@@ -306,9 +306,9 @@
             </form>
             <div fxFlex fxLayout="column" class="mt-24">
               <div style="margin-left: 7px">
-                <!-- <span class="SectionTitle"><strong>Identification Table</strong></span> -->
+                <!-- <span class="SectionTitle"><strong>Identity Table</strong></span> -->
                 <div class="SectionTitle">
-                  <strong>Identification Table</strong>
+                  <strong>Identity Table</strong>
                 </div>
               </div>
               <div class="mt-8">
